--- a/app/views/sections/_discover.html.erb
+++ b/app/views/sections/_discover.html.erb
@@ -1,4 +1,7 @@
 <div id="discover">
+  <div class="discover-radius">
+
+  </div>
   <div class="mission">
     <!-- Title -->
     <h2>Our mission</h2>
