--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -12,9 +12,8 @@ $base-height: 1.4;
  * Colors
  * ------------------------------------- */
 // Scheme
-$brand-blue: #4569F7;
-$brand-blue-light: #B8F1FF;
-$brand-blue-opacity: rgba(118, 228, 253, .8);
+$brand-red: #FF2C32;
+$brand-black: #222222;
 
 // Gray
 $gray-light: #FDFDFD;
