--- a/app/views/sections/_discover.html.erb
+++ b/app/views/sections/_discover.html.erb
@@ -1,86 +1,41 @@
 <div id="discover">
   <div class="discover-radius">
-
-  </div>
-  <div class="mission">
-    <!-- Title -->
-    <h2>Our mission</h2>
-    <!-- Description -->
-    <div class="discover-desc"><strong>helloradius</strong> is a social media agency focus on Instagram.
-      Our goal is to increase significantly <br>
-      your traffic and your engagment. Saving you time is also one of our biggest concern, we want you <br>
-      to just focus on taking care of your community while we’re doing the rest !
-      <br>
-      We are here to coach you through your journey on Instagram.
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+          <div class="card discover">
+            <img src="" alt="">
+            <h2 class="dicover-title">Content Analysis</h2>
+            <p class="discover-desc">
+              Get your account reviewed by our team of experts, let’s them work
+              on improvments, receive the monthly report.
+            </p>
+            <button class="dicsover-cta">See more</button>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+          <div class="card discover">
+            <img src="" alt="">
+            <h2 class="dicover-title">Growth Strategies</h2>
+            <p class="discover-desc">
+              At helloradius our experts create tailored strategies for you and
+              your and your users. Change the way you interact with potential customers.
+            </p>
+            <button class="dicsover-cta">See more</button>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+          <div class="card discover">
+            <img src="" alt="">
+            <h2 class="dicover-title">and more…</h2>
+            <p class="discover-desc">
+              Our goal is to create the perfect experience for customers. Create a
+              reliable and engaged community around your business.
+            </p>
+            <button class="dicsover-cta">See more</button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-
-  <div class="card-feature">
-    <img src="" alt="">
-    <div class="feature-content">
-      <div class="feature-title">Growth managment</div>
-      <div class="feature-desc">Our core strength is the growth. We’ve team up with the
-        best growth hacker we know to provide you the best
-        services. Get results within a week and start engage with
-        all those new potential customers.</div>
-      <div class="feature-cta">Get started...</div>
-    </div>
-  </div>
-  <div class="card-feature">
-    <img src="" alt="">
-    <div class="feature-content">
-      <div class="feature-title">Hashtags research</div>
-      <div class="feature-desc">A good hashtag search is a game changer when you want
-        to reach more people everyday. Let us do that for you.
-        Engage with the right people at the right moment will turn
-        your basic account into a pro one!</div>
-      <div class="feature-cta">Get started...</div>
-    </div>
-  </div>
-  <div class="card-feature">
-    <img src="" alt="">
-    <div class="feature-content">
-      <div class="feature-title">Digital Strategy</div>
-      <div class="feature-desc">Set up awesome strategies with us to win the market on
-        Instagram. Be noticed by targeted customers by engaging
-        with them and creating the best experience for them
-        on your Instagram profile.</div>
-      <div class="feature-cta">Get started...</div>
-    </div>
-  </div>
-  <div class="card-feature">
-    <img src="" alt="">
-    <div class="feature-content">
-      <div class="feature-title">We post for you </div>
-      <div class="feature-desc">In order to save you time, we post for you. Our team analyse
-        the best time to reach your community and engage with
-        them. By doing this it help you to keep focus on what matter
-        most, your content and your customers.</div>
-      <div class="feature-cta">Get started...</div>
-    </div>
-  </div>
-  <div class="card-feature">
-    <img src="" alt="">
-    <div class="feature-content">
-      <div class="feature-title">Design Coaching</div>
-      <div class="feature-desc">With a great eye of design, our UX-UI team is here to
-        give the best advices to match the trends on Instagram
-        in term of content. From stories to posts be the best
-        in your domain. </div>
-      <div class="feature-cta">Get started...</div>
-    </div>
-  </div>
-  <div class="card-feature">
-    <img src="" alt="">
-    <div class="feature-content">
-      <div class="feature-title">Support and reports</div>
-      <div class="feature-desc">Depends on your plan, receive reports that show you where
-        and when things happened on your account. Giving you
-        the best support we can is one of our concern, at anytime.
-        Let’s grow together ! </div>
-      <div class="feature-cta">Get started...</div>
-    </div>
-  </div>
-
-
 </div>
