--- a/app/views/sections/_pricing.html.erb
+++ b/app/views/sections/_pricing.html.erb
@@ -16,6 +16,7 @@
               <li>Unlimited Support</li>
             </ul>
           </div>
+          <button class="button-primary">Purchase</button>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
@@ -33,6 +34,7 @@
               <li>Unlimited Support</li>
             </ul>
           </div>
+          <button class="button-primary">Purchase</button>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
@@ -50,6 +52,7 @@
               <li>Unlimited Support</li>
             </ul>
           </div>
+          <button class="button-primary">Purchase</button>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
@@ -67,6 +70,7 @@
               <li>Unlimited Support</li>
             </ul>
           </div>
+          <button class="button-primary">Purchase</button>
         </div>
       </div>
     </div>
