--- a/app/views/banners/_banner_home.html.erb
+++ b/app/views/banners/_banner_home.html.erb
@@ -1,1 +1,8 @@
-<div id="banner-home"></div>
+<div id="banner-home">
+  <h1 class="banner-title">
+    The power of instagram experts <br>
+    who brings your account to the next level.
+  </h1>
+  <p>Get exposure, grow your audience,  boost your engagement.</p>
+  <button class="button-primary">Get Started</button>
+</div>
