--- a/app/views/sections/_contact_us.html.erb
+++ b/app/views/sections/_contact_us.html.erb
@@ -1,1 +1,10 @@
-_contact_us.html.erb
+<div id="contact">
+  <div class="container">
+    <div class="row text-center">
+      <h3 class="contact-title">Do you still have questions?  Visit our FAQ or contact us via mail.</h3>
+    </div>
+    <div class="row text-center">
+      <button class="button-secondary">Contact us</button>
+    </div>
+  </div>
+</div>
