--- a/app/views/sections/_how.html.erb
+++ b/app/views/sections/_how.html.erb
@@ -1,1 +1,51 @@
-_how.html.erb
+<div id="how">
+  <!-- Title -->
+  <div class="container">
+    <div class="row">
+      <h3 class="how-title text-center">How it works</h3>
+    </div>
+
+    <!-- Cards -->
+    <div class="row">
+      <!-- Step 1 -->
+      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
+        <div class="card-how">
+          <img src="" alt="">
+          <h4>Fill a form to explain your needs.</h4>
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Step 2 -->
+      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
+        <div class="card-how">
+          <img src="" alt="">
+          <h4>Get in touch with our team within a day.</h4>
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Step 3 -->
+      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
+        <div class="card-how">
+          <img src="" alt="">
+          <h4>Let our expert works on your strategy.</h4>
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Step 4 -->
+      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
+        <div class="card-how">
+          <img src="" alt="">
+          <h4>See the magic happened...</h4>
+          <p></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row text-center">
+      <button class="button-primary">Start today</button>
+    </div>
+  </div>
+</div>
