--- a/app/assets/stylesheets/sections/_pricing.scss
+++ b/app/assets/stylesheets/sections/_pricing.scss
@@ -1,5 +1,7 @@
 #pricing {
   width: 100%;
-  min-height: 500px;
+  min-height: 650px;
   background-color: #FEE7E8;
+  padding-top: 100px;
+  padding-bottom: 50px;
 }
