--- a/app/views/sections/_pricing.html.erb
+++ b/app/views/sections/_pricing.html.erb
@@ -1,10 +1,10 @@
 <div id="pricing">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
         <div class="card-pricing">
-          <div class="pricing-title">Starter</div>
-          <div class="pricing-aomunt">$ 89</div>
+          <div class="pricing-title text-center">Starter</div>
+          <div class="pricing-amount">$ 89</div>
           <div class="pricing-features">
             <ul>
               <li>Growth Management</li>
@@ -19,10 +19,10 @@
           <button class="button-primary">Purchase</button>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
         <div class="card-pricing">
-          <div class="pricing-title">Professionnal</div>
-          <div class="pricing-aomunt">$ 149</div>
+          <div class="pricing-title text-center">Professional</div>
+          <div class="pricing-amount ">$ 149</div>
           <div class="pricing-features">
             <ul>
               <li>Growth Management</li>
@@ -37,10 +37,10 @@
           <button class="button-primary">Purchase</button>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
         <div class="card-pricing">
-          <div class="pricing-title">Unlimited</div>
-          <div class="pricing-aomunt">$ 349</div>
+          <div class="pricing-title text-center">Unlimited</div>
+          <div class="pricing-amount ">$ 349</div>
           <div class="pricing-features">
             <ul>
               <li>Growth Management</li>
@@ -55,10 +55,10 @@
           <button class="button-primary">Purchase</button>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
         <div class="card-pricing">
-          <div class="pricing-title">Tailored</div>
-          <div class="pricing-aomunt">$ 89</div>
+          <div class="pricing-title text-center">Tailored</div>
+          <div class="pricing-amount ">$ 89</div>
           <div class="pricing-features">
             <ul>
               <li>Growth Management</li>
