card pricing done

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,7 +7,7 @@
 @import "config/variables";
 
 // Components
-// @import "components/buttons";
+@import "components/buttons";
 @import "components/navbar";
 @import "components/cards";
 @import "components/footer";
