--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -12,7 +12,7 @@ $base-height: 1.4;
  * Colors
  * ------------------------------------- */
 // Scheme
-$brand-red: #FF2C32;
+$brand-red: #F0454C;
 $brand-black: #222222;
 
 // Gray
