--- a/app/views/sections/_pricing.html.erb
+++ b/app/views/sections/_pricing.html.erb
@@ -7,16 +7,34 @@
           <div class="pricing-amount">$ 89</div>
           <div class="pricing-features">
             <ul>
-              <li>Growth Management</li>
-              <li>Analytics Report</li>
-              <li>Hashtags Research</li>
-              <li>We post for you</li>
-              <li>Digital Strategy</li>
-              <li>Design Coaching</li>
-              <li>Unlimited Support</li>
+              <li>
+                <i class="fas fa-check-circle circle-checked"></i>
+                Growth Management</li>
+              <li>
+                <i class="fas fa-check-circle circle-checked"></i>
+                Analytics Report</li>
+              <li>
+                <i class="fas fa-check-circle circle-checked"></i>
+                Hashtags Research</li>
+              <li class="unchecked-feature">
+                <i class="fas fa-check-circle circle-checked"></i>
+                We post for you</li>
+              <li class="unchecked-feature">
+                <i class="fas fa-check-circle circle-checked"></i>
+                Digital Strategy</li>
+              <li class="unchecked-feature">
+                <i class="fas fa-check-circle circle-checked"></i>
+                Design Coaching</li>
+              <li class="unchecked-feature">
+                <i class="fas fa-check-circle circle-checked"></i>
+                Unlimited Support</li>
             </ul>
           </div>
-          <button class="button-primary">Purchase</button>
+
+          <!-- Footer Card Pricing -->
+          <div class="pricing-card-footer">
+            <a href="/plan/starter" class="btn-pricing">Purchase</a>
+          </div>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
@@ -25,16 +43,34 @@
           <div class="pricing-amount ">$ 149</div>
           <div class="pricing-features">
             <ul>
-              <li>Growth Management</li>
-              <li>Analytics Report</li>
-              <li>Hashtags Research</li>
-              <li>We post for you</li>
-              <li>Digital Strategy</li>
-              <li>Design Coaching</li>
-              <li>Unlimited Support</li>
+              <li>
+                <i class="fas fa-check-circle circle-checked"></i>
+                Growth Management</li>
+              <li>
+                <i class="fas fa-check-circle circle-checked"></i>
+                Analytics Report</li>
+              <li>
+                <i class="fas fa-check-circle circle-checked"></i>
+                Hashtags Research</li>
+              <li>
+                <i class="fas fa-check-circle circle-checked"></i>
+                We post for you</li>
+              <li>
+                <i class="fas fa-check-circle circle-checked"></i>
+                Digital Strategy</li>
+              <li class="unchecked-feature">
+                <i class="fas fa-check-circle circle-checked"></i>
+                Design Coaching</li>
+              <li class="unchecked-feature">
+                <i class="fas fa-check-circle circle-checked"></i>
+                Unlimited Support</li>
             </ul>
           </div>
-          <button class="button-primary">Purchase</button>
+
+          <!-- Footer Card Pricing -->
+          <div class="pricing-card-footer">
+            <a href="/plan/starter" class="btn-pricing">Purchase</a>
+          </div>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
@@ -43,16 +79,34 @@
           <div class="pricing-amount ">$ 349</div>
           <div class="pricing-features">
             <ul>
-              <li>Growth Management</li>
-              <li>Analytics Report</li>
-              <li>Hashtags Research</li>
-              <li>We post for you</li>
-              <li>Digital Strategy</li>
-              <li>Design Coaching</li>
-              <li>Unlimited Support</li>
+              <li>
+                <i class="fas fa-check-circle circle-checked"></i>
+                Growth Management</li>
+              <li>
+                <i class="fas fa-check-circle circle-checked"></i>
+                Analytics Report</li>
+              <li>
+                <i class="fas fa-check-circle circle-checked"></i>
+                Hashtags Research</li>
+              <li>
+                <i class="fas fa-check-circle circle-checked"></i>
+                We post for you</li>
+              <li>
+                <i class="fas fa-check-circle circle-checked"></i>
+                Digital Strategy</li>
+              <li>
+                <i class="fas fa-check-circle circle-checked"></i>
+                Design Coaching</li>
+              <li>
+                <i class="fas fa-check-circle circle-checked"></i>
+                Unlimited Support</li>
             </ul>
           </div>
-          <button class="button-primary">Purchase</button>
+
+          <!-- Footer Card Pricing -->
+          <div class="pricing-card-footer">
+            <a href="/plan/starter" class="btn-pricing">Purchase</a>
+          </div>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
@@ -61,16 +115,34 @@
           <div class="pricing-amount ">$ 89</div>
           <div class="pricing-features">
             <ul>
-              <li>Growth Management</li>
-              <li>Analytics Report</li>
-              <li>Hashtags Research</li>
-              <li>We post for you</li>
-              <li>Digital Strategy</li>
-              <li>Design Coaching</li>
-              <li>Unlimited Support</li>
+              <li class="unchecked-feature">
+                <i class="fas fa-check-circle circle-checked"></i>
+                Growth Management</li>
+              <li class="unchecked-feature">
+                <i class="fas fa-check-circle circle-checked"></i>
+                Analytics Report</li>
+              <li class="unchecked-feature">
+                <i class="fas fa-check-circle circle-checked"></i>
+                Hashtags Research</li>
+              <li class="unchecked-feature">
+                <i class="fas fa-check-circle circle-checked"></i>
+                We post for you</li>
+              <li class="unchecked-feature">
+                <i class="fas fa-check-circle circle-checked"></i>
+                Digital Strategy</li>
+              <li class="unchecked-feature">
+                <i class="fas fa-check-circle circle-checked"></i>
+                Design Coaching</li>
+              <li class="unchecked-feature">
+                <i class="fas fa-check-circle circle-checked"></i>
+                Unlimited Support</li>
             </ul>
           </div>
-          <button class="button-primary">Purchase</button>
+
+          <!-- Footer Card Pricing -->
+          <div class="pricing-card-footer">
+            <a href="/plan/starter" class="btn-pricing">Purchase</a>
+          </div>
         </div>
       </div>
     </div>
