change some features

--- a/app/views/sections/_pricing.html.erb
+++ b/app/views/sections/_pricing.html.erb
@@ -24,7 +24,7 @@
                 Digital Strategy</li>
               <li class="unchecked-feature">
                 <i class="fas fa-check-circle circle-checked"></i>
-                Design Coaching</li>
+                Design Solution</li>
               <li class="unchecked-feature">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Unlimited Support</li>
@@ -60,7 +60,7 @@
                 Digital Strategy</li>
               <li class="unchecked-feature">
                 <i class="fas fa-check-circle circle-checked"></i>
-                Design Coaching</li>
+                Design Solution</li>
               <li class="unchecked-feature">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Unlimited Support</li>
@@ -96,7 +96,7 @@
                 Digital Strategy</li>
               <li>
                 <i class="fas fa-check-circle circle-checked"></i>
-                Design Coaching</li>
+                Design Solution</li>
               <li>
                 <i class="fas fa-check-circle circle-checked"></i>
                 Unlimited Support</li>
@@ -132,7 +132,7 @@
                 Digital Strategy</li>
               <li class="unchecked-feature">
                 <i class="fas fa-check-circle circle-checked"></i>
-                Design Coaching</li>
+                Design Solution</li>
               <li class="unchecked-feature">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Unlimited Support</li>
