add mailchimp signup + Footer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,7 @@
 @import "sections/how";
 @import "sections/contact";
 @import "sections/pricing";
+@import "sections/newsletter";
 
 // Pages
 // @import "pages/about";
