--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -38,7 +38,7 @@
 
 .pricing-features {
   ul {
-    padding-left: 16%;
+    padding-left: 15%;
     list-style: none;
 
     li {
@@ -48,7 +48,7 @@
       padding-top: 18px;
 
       svg {
-        margin-right: 15px;
+        margin-right: 7%;
       }
     }
 
