--- a/app/views/sections/_newsletter.html.erb
+++ b/app/views/sections/_newsletter.html.erb
@@ -1,1 +1,39 @@
-<div id="letter"></div>
+<div id="newsletter">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="newsletter-tagline text-center">Subscribe to our newsletter to stay updated.</div>
+        <!-- Begin MailChimp Signup Form -->
+        <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+
+        <!-- MailChimp Newsletter -->
+        <style type="text/css">
+
+          #mc_embed_signup {
+            background: #fff;
+            clear: left;
+            font: 14px "Avenir", sans-serif;
+            width:100%;
+          }
+
+        </style>
+
+        <div id="mc_embed_signup">
+          <form action="https://helloradius.us19.list-manage.com/subscribe/post?u=2b076c6068652a862e20667a7&amp;id=954ab35262" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+              <input  class="input-newsletter" type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="bastien@helloradius.co" required>
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                <input type="text" name="b_2b076c6068652a862e20667a7_954ab35262" tabindex="-1" value="">
+              </div>
+              <div class="clear">
+                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button button-newsletter">
+              </div>
+            </div>
+          </form>
+        </div>
+        <!--End mc_embed_signup-->
+      </div>
+    </div>
+  </div>
+</div>
