--- a/app/views/shared/_footer_home.html.erb
+++ b/app/views/shared/_footer_home.html.erb
@@ -1,28 +1,39 @@
 <div id="footer">
-  <div class="top-part">
+  <!-- Top Footer -->
+  <div class="top-footer">
     <!-- Logo -->
     <div class="logo-footer">helloradius</div>
+
     <!-- Navigation -->
     <div class="nav-footer">
-      <div class="ul list-inline">
-        <li><a href="/">License</a></li>
-        <li><a href="/">Privacy policy</a></li>
-        <li><a href="/">Contact us</a></li>
-        <li><a href="/">Faq</a></li>
-        <li><a href="/">Blog</a></li>
-      </div>
+      <ul class="list-inline">
+        <li><a href="/blog">Blog</a></li>
+        <li><a href="/faq">Faq</a></li>
+        <li><a href="/license">License</a></li>
+        <li><a href="/privacy">Privacy policy</a></li>
+        <li><a href="/contact">Contact us</a></li>
+      </ul>
     </div>
+
     <!-- Socials -->
     <div class="socials">
-      <div class="ul list-inline">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </div>
+      <ul class="list-inline">
+        <li>
+          <a href="">
+            <i class="fab fa-instagram" aria-hidden="true"></i>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <i class="fab fa-facebook" aria-hidden="true"></i>
+          </a>
+        </li>
+      </ul>
     </div>
   </div>
-  <div class="down-part">
+
+  <!-- Bottom Footer -->
+  <div class="bottom-footer">
     <div class="copyright">2018 © helloradius. All rights reserved.</div>
     <div class="craftedby">Crafted with ❤️ by productile</div>
   </div>
