--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -16,3 +16,19 @@
     text-decoration: none;
   }
 }
+
+.button-newsletter {
+  background-color: $brand-red !important;
+  max-width: 180px;
+  border-radius: 50px !important;
+  padding: 0 40px !important;
+  margin-left: 30px !important;
+  font-size: 17px !important;
+  font-weight: 500 !important;
+  height: 40px !important;
+  box-shadow: 0px 6px 20px 0px rgba(235, 73, 84, .3) !important;
+
+   @media screen and (max-width: 330px) {
+    margin-left: 0px !important;
+  }
+}
