--- a/app/views/banners/_banner_home.html.erb
+++ b/app/views/banners/_banner_home.html.erb
@@ -1,8 +1,8 @@
 <div id="banner-home">
   <h1 class="banner-title">
-    The power of instagram experts <br>
+    The power of <mark class="highlight">instagram experts</mark> <br>
     who brings your account to the next level.
   </h1>
-  <p>Get exposure, grow your audience,  boost your engagement.</p>
-  <button class="button-primary">Get Started</button>
+  <p class="banner-desc">Get exposure, grow your audience,  boost your engagement.</p>
+  <a class="btn-pricing btn-medium" href="/plan">Get Started</a>
 </div>
