--- a/app/views/sections/_features.html.erb
+++ b/app/views/sections/_features.html.erb
@@ -1,3 +1,4 @@
+<div id="features">
   <div class="container">
     <!-- Our Mission -->
     <div class="row">
@@ -111,3 +112,4 @@
       </div>
     </div>
   </div>
+</div>
