--- a/app/views/shared/_navbar_home.html.erb
+++ b/app/views/shared/_navbar_home.html.erb
@@ -5,32 +5,37 @@
   </a>
   <div class="nav-container">
     <div class="nav-element">
-      <a href="#purpose">
+      <a href="#discover">
         Discover
       </a>
     </div> <!-- End .nav-element -->
+
+    <div class="nav-element">
+      <a href="#features">
+        Features
+      </a>
+    </div> <!-- End .nav-element -->
+
     <div class="nav-element">
       <a href="#how">
         How
       </a>
     </div> <!-- End .nav-element -->
+
     <div class="nav-element">
       <a href="#pricing">
         Pricing
       </a>
     </div> <!-- End .nav-element -->
-    <div class="nav-element">
-      <a href="#about">
-        About
-      </a>
-    </div> <!-- End .nav-element -->
+
     <div class="nav-element">
       <a href="#contact">
         Contact
       </a>
     </div> <!-- End .nav-element -->
+
     <div class="nav-element">
-      <a class="primary-btn" href="/plan">Get Started</a>
+      <a class="secondary-btn" href="/plan">Get Started</a>
     </div> <!-- End .nav-element -->
   </div>
 </div>
