--- a/app/assets/stylesheets/sections/_how.scss
+++ b/app/assets/stylesheets/sections/_how.scss
@@ -1,5 +1,6 @@
 #how {
-  width: 100%;
-  min-height: 50vh;
+  min-height: 70vh;
   background-color: #F2F2F2;
+  margin-top: -50px;
+  padding: 100px 0;
 }
