--- a/app/views/sections/_discover.html.erb
+++ b/app/views/sections/_discover.html.erb
@@ -3,36 +3,36 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-          <div class="card discover">
-            <img src="" alt="">
-            <h2 class="dicover-title">Content Analysis</h2>
+          <div class="card-discover">
+            <%= image_tag("001-analysis.svg", class: "discover-image") %>
+            <div class="discover-title">Content Analysis</div>
             <p class="discover-desc">
               Get your account reviewed by our team of experts, let’s them work
               on improvments, receive the monthly report.
             </p>
-            <button class="dicsover-cta">See more</button>
+            <a class="secondary-btn btn-large" href="#features">See more</a>
           </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-          <div class="card discover">
-            <img src="" alt="">
-            <h2 class="dicover-title">Growth Strategies</h2>
+          <div class="card-discover">
+            <%= image_tag("002-growth.svg", class: "discover-image pt10") %>
+            <div class="discover-title">Growth Strategies</div>
             <p class="discover-desc">
               At helloradius our experts create tailored strategies for you and
               your and your users. Change the way you interact with potential customers.
             </p>
-            <button class="dicsover-cta">See more</button>
+            <a class="secondary-btn btn-large" href="#features">See more</a>
           </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-          <div class="card discover">
-            <img src="" alt="">
-            <h2 class="dicover-title">and more…</h2>
+          <div class="card-discover">
+            <%= image_tag("003-more.svg", class: "discover-image") %>
+            <div class="discover-title">and more…</div>
             <p class="discover-desc">
               Our goal is to create the perfect experience for customers. Create a
               reliable and engaged community around your business.
             </p>
-            <button class="dicsover-cta">See more</button>
+            <a class="secondary-btn btn-large" href="#features">See more</a>
           </div>
         </div>
       </div>
