--- a/app/views/banners/_banner_home.html.erb
+++ b/app/views/banners/_banner_home.html.erb
@@ -1,8 +1,12 @@
 <div id="banner-home">
+  <!-- Banner Title -->
   <h1 class="banner-title">
     The power of <mark class="highlight">instagram experts</mark> <br>
     who brings your account to the next level.
   </h1>
   <p class="banner-desc">Get exposure, grow your audience,  boost your engagement.</p>
   <a class="btn-pricing btn-medium" href="/plan">Get Started</a>
+
+  <!-- Banner img -->
+  <%= image_tag("banner-bg.svg", class: "banner-bg") %>
 </div>
