--- a/app/views/sections/_features.html.erb
+++ b/app/views/sections/_features.html.erb
@@ -4,10 +4,10 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="mission text-center">
-          <!-- Title -->
           <h2>Our mission</h2>
           <!-- Description -->
-          <div class="discover-desc"><strong>helloradius</strong> is a social media agency focus on Instagram.
+          <div class="features-desc">
+            <strong>helloradius</strong> is a social media agency focus on Instagram.
             Our goal is to increase significantly <br>
             your traffic and your engagment. Saving you time is also one of our biggest concern, we want you <br>
             to just focus on taking care of your community while we’re doing the rest !
@@ -24,7 +24,7 @@
       <!-- Feature Growth Management -->
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
         <div class="card-feature">
-          <img src="" alt="">
+          <%= image_tag("feature1.png", class: "feature-icon") %>
           <div class="feature-content">
             <div class="feature-title">Growth management</div>
             <div class="feature-desc">Our core strength is the growth. We’ve team up with the
@@ -39,7 +39,7 @@
       <!-- Feature Hashtag research -->
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
         <div class="card-feature">
-          <img src="" alt="">
+          <%= image_tag("feature2.png", class: "feature-icon") %>
           <div class="feature-content">
             <div class="feature-title">Hashtags research</div>
             <div class="feature-desc">A good hashtag search is a game changer when you want
@@ -54,7 +54,7 @@
       <!-- Feature Digital Strategy -->
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
         <div class="card-feature">
-          <img src="" alt="">
+          <%= image_tag("feature3.png", class: "feature-icon") %>
           <div class="feature-content">
             <div class="feature-title">Digital Strategy</div>
             <div class="feature-desc">Set up awesome strategies with us to win the market on
@@ -69,7 +69,7 @@
       <!-- Feature We post for you -->
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
         <div class="card-feature">
-          <img src="" alt="">
+          <%= image_tag("feature4.png", class: "feature-icon") %>
           <div class="feature-content">
             <div class="feature-title">We post for you </div>
             <div class="feature-desc">In order to save you time, we post for you. Our team analyse
@@ -84,7 +84,7 @@
       <!-- Feature Design Coaching -->
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
         <div class="card-feature">
-          <img src="" alt="">
+          <%= image_tag("feature5.png", class: "") %>
           <div class="feature-content">
             <div class="feature-title">Design Coaching</div>
             <div class="feature-desc">With a great eye of design, our UX-UI team is here to
@@ -99,7 +99,7 @@
       <!-- Feature Support and Reports -->
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
         <div class="card-feature">
-          <img src="" alt="">
+          <%= image_tag("feature6.png", class: "") %>
           <div class="feature-content">
             <div class="feature-title">Support and reports</div>
             <div class="feature-desc">Depends on your plan, receive reports that show you where
