add contact and other pages in the website

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -88,8 +88,10 @@
 }
 
 
-.productile-logo {
-  height: 30px;
+.helloradius-logo {
+  padding-left: 13px;
+  height: 15px;
+  margin-top: -15px;
 }
 
 .productile-logo-small {
