--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -6,4 +6,4 @@
 <%= render 'sections/contact_us' %>
 <%= render 'sections/pricing' %>
 <%= render 'sections/newsletter' %>
-<%= render 'shared/footer_home' %>
+<%= render 'shared/footer' %>
