--- a/app/views/sections/_contact_us.html.erb
+++ b/app/views/sections/_contact_us.html.erb
@@ -1,10 +1,10 @@
 <div id="contact">
   <div class="container">
     <div class="row text-center">
-      <h3 class="contact-title">Do you still have questions?  Visit our FAQ or contact us via mail.</h3>
+      <h4 class="contact-title">Do you still have questions?  Visit our FAQ or contact us via mail.</h4>
     </div>
-    <div class="row text-center">
-      <button class="button-secondary">Contact us</button>
+    <div class="row text-center mt30">
+      <a class="secondary-btn" href="mailto:bastien@helloradius.co">Contact us</a>
     </div>
   </div>
 </div>
