--- a/app/views/sections/_newsletter.html.erb
+++ b/app/views/sections/_newsletter.html.erb
@@ -10,7 +10,7 @@
         <style type="text/css">
 
           #mc_embed_signup {
-            background: #fff;
+            background: none;
             clear: left;
             font: 14px "Avenir", sans-serif;
             width:100%;
