--- a/app/views/sections/_pricing.html.erb
+++ b/app/views/sections/_pricing.html.erb
@@ -141,7 +141,7 @@
 
           <!-- Footer Card Pricing -->
           <div class="pricing-card-footer">
-            <a href="/plan/starter" class="btn-pricing">Purchase</a>
+            <a href="/plan/starter" class="btn-pricing">Contact us</a>
           </div>
         </div>
       </div>
