--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,35 +1,35 @@
 <!-- Navbar -->
 <div class="navbar-recovr hidden-sm hidden-xs">
-  <a href="#banner-home" class="logo">
+  <a href="/#banner-home" class="logo">
     <%= image_tag("logo-helloradius.svg", class: "helloradius-logo") %>
   </a>
   <div class="nav-container">
     <div class="nav-element">
-      <a href="#discover">
+      <a href="/#discover">
         Discover
       </a>
     </div> <!-- End .nav-element -->
 
     <div class="nav-element">
-      <a href="#features">
+      <a href="/#features">
         Features
       </a>
     </div> <!-- End .nav-element -->
 
     <div class="nav-element">
-      <a href="#how">
+      <a href="/#how">
         How
       </a>
     </div> <!-- End .nav-element -->
 
     <div class="nav-element">
-      <a href="#pricing">
+      <a href="/#pricing">
         Pricing
       </a>
     </div> <!-- End .nav-element -->
 
     <div class="nav-element">
-      <a href="#contact">
+      <a href="/#contact">
         Contact
       </a>
     </div> <!-- End .nav-element -->
