--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,13 +22,13 @@
 @import "sections/newsletter";
 
 // Pages
-// @import "pages/about";
-// @import "pages/blog";
+@import "pages/about";
+@import "pages/blog";
 // @import "pages/contact";
-// @import "pages/faq";
-// @import "pages/jobs";
+@import "pages/faq";
+@import "pages/jobs";
 // @import "pages/pages";
-// @import "pages/terms";
+@import "pages/terms";
 
 // Plans
 // @import "plans/plan";
