--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,4 +1,4 @@
-// Card How
+/////////////////////////////////////////////////////////////////////// Card How
 .card-how {
   text-align: center;
 }
@@ -12,8 +12,19 @@
   min-height: 350px;
   border-radius: 10px;
   box-shadow: 0px 6px 20px 0px rgba(160, 160, 160, .3);
-  // text-align: center;
-  margin-top: -100px;
+  margin-top: -130px;
+
+
+  @media screen and (max-width: 992px) {
+    margin-top: 50px;
+    margin-left: 15%;
+    margin-right: 15%;
+  }
+
+  @media screen and (max-width: 9767px) {
+    margin-left: 2%;
+    margin-right: 2%;
+  }
 
   img {
     position: absolute;
@@ -31,6 +42,14 @@
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+
+    @media screen and (max-width: 992px) {
+      width: 90%;
+    }
+
+    @media screen and (max-width: 9767px) {
+      width: 80%;
+    }
   }
 
   a {
@@ -65,6 +84,14 @@
   margin-right: auto;
   color: #868686;
   font-weight: 200;
+
+  @media screen and (max-width: 992px) {
+    width: 90%;
+  }
+
+  @media screen and (max-width: 9767px) {
+    width: 80%;
+  }
 }
 
 /////////////////////////////////////////////////////////////////// Card Feature
