--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,23 +1,3 @@
-// #footer {
-//   width: 100%;
-//   height: 200px;
-//   background-color: blue;
-//   display: block;
-// }
-
-// .top-footer {
-//
-// }
-
-// .bottom-footer {
-//   width: 100%;
-//   min-height: 150px !important;
-//   color: white;
-//   background-color: red;
-//   display: flex;
-//   justify-content: space-between;
-// }
-
 #footer {
   background-color: $gray-medium;
   font-family: "Avenir";
@@ -30,20 +10,40 @@
   justify-content: space-between;
   align-items: flex-end;
   padding: 0 11% 30px 11%;
+
+  @media screen and (max-width: 767px) {
+    flex-direction: column;
+    min-height: 200px;
+    justify-content: space-around;
+    align-items: center;
+    padding: 30px 11% 30px 11%;
+  }
 }
 
 .logo-footer {
   font-size: 17px;
   font-weight: 600;
   letter-spacing: 1px;
+
+  @media screen and (max-width: 767px) {
+    margin-bottom: 20px;
+  }
 }
 
 .nav-footer {
   ul {
     margin-bottom: 0;
 
+
     li {
       padding: 0 15px;
+
+      @media screen and (max-width: 767px) {
+        display: block;
+        margin-top: 10px;
+        text-align: center;
+      }
+
 
       a {
         color: $gray-dark;
@@ -54,6 +54,8 @@
       }
     }
   }
+
+
 }
 
 .socials {
@@ -64,6 +66,11 @@
       a {
           color: $gray-dark;
           font-size: 20px;
+      }
+
+      @media screen and (max-width: 767px) {
+        margin-top: 30px;
+        text-align: center;
       }
     }
   }
@@ -77,4 +84,14 @@
   justify-content: space-between;
   align-items: flex-end;
   padding: 0 11% 25px 11%;
+
+  @media screen and (max-width: 767px) {
+    display: block;
+    text-align: center;
+    padding-top: 10px;
+
+    div {
+      margin-top: 10px;
+    }
+  }
 }
