--- a/app/assets/stylesheets/sections/_discover.scss
+++ b/app/assets/stylesheets/sections/_discover.scss
@@ -1,10 +1,23 @@
 #discover {
-  margin-top: -150px;
-  padding: 200px 0;
+  margin-top: -160px;
+  padding: 200px 0 50px;
+  background-color: #FEE7E8;
+
+  @media screen and (max-width: 767px) {
+    margin-top: 0;
+    padding: 0 20px;
+  }
 }
 
 .discover-radius {
   width: 100%;
-  height: 400px;
-  background-color: #FEE7E8;
+  min-height: 280px;
+  padding-top:-50px;
+  //background-color: #FEE7E8;
+
+  @media screen and (max-width: 767px) {
+    padding: 50px 0 100px;
+  }
 }
+
+
