--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,8 +9,7 @@
       <ul class="list-inline">
         <li><a href="/blog">Blog</a></li>
         <li><a href="/faq">Faq</a></li>
-        <li><a href="/license">License</a></li>
-        <li><a href="/privacy">Privacy policy</a></li>
+        <li><a href="/terms">Terms and Conditions</a></li>
         <li><a href="/contact">Contact us</a></li>
       </ul>
     </div>
